# music-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_web.py
.claude/: settings.local.json
docs/: PRD.md
docs/plans/: multi-playlist-design-merged.md  multi-playlist-design-v1.md
scripts/: SwimSync.bat  SwimSyncWeb.bat  check_deps.py
src/swimsync/: __init__.py  __main__.py  app.py  config_manager.py  library_manager.py  migration.py  state_manager.py  sync_engine.py  track_storage.py  web_app.py
src/swimsync/ui/: __init__.py  empty_state.py  loading.py  progress.py  shortcuts.py
src/swimsync/web/static/css/: style.css
src/swimsync/web/static/js/: app.js
src/swimsync/web/templates/: index.html
tests/: __init__.py  quick_test.py  test_track_storage.py
