[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimsync"
version = "1.0.0"
description = "Sync Spotify playlists to MP3 files for offline listening"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "melon-hub"}
]
keywords = ["spotify", "mp3", "sync", "music", "playlist", "shokz", "openswim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "spotdl>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
swimsync = "swimsync.app:main"

[project.gui-scripts]
swimsync-gui = "swimsync.app:main"

[project.urls]
"Homepage" = "https://github.com/melon-hub/swimsync"
"Bug Tracker" = "https://github.com/melon-hub/swimsync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
